--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~8.1.2",
     "@capacitor/android": "^1.1.1",
     "@capacitor/core": "1.1.1",
+    "@capacitor/ios": "^1.2.1",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
