--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/forms": "~8.1.2",
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
+    "@angular/pwa": "^0.803.19",
     "@angular/router": "~8.1.2",
+    "@angular/service-worker": "~8.1.2",
     "@capacitor/android": "^1.1.1",
     "@capacitor/core": "1.1.1",
     "@capacitor/ios": "^1.2.1",
